--- a/color.html
+++ b/color.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Color Orbit Study</title>
+  <title>COLOR ORBIT STUDY</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
